# django-users

./: .gitignore  LICENSE  MANIFEST.in  README.md  admin.py  asgi.py  email.py  forms.py  pyproject.toml  setup.cfg  urls.py
dwiest/django/auth/: forms.py  views.py
dwiest/django/users/: admin.py  conf.py  email.py  forms.py  models.py  signals.py  urls.py  views.py
dwiest/django/users/mfa/: __init__.py  email.py  forms.py  models.py  signals.py  urls.py  views.py
dwiest/django/users/migrations/: 0002_alter_activationid_value.py  0003_mfamodel.py  0004_remove_mfamodel_last_used.py  0005_activationid_created_at.py
dwiest/django/users/templates/: css.html  footer-css.html  footer.html  password_change.html  password_change_success.html  password_reset_confirm.html  password_reset_confirm_success.html  password_reset_failed.html  registration.html  registration_confirm_failed.html  registration_confirm_success.html  registration_failed.html  registration_success.html  reset_password.html  send_password_reset.html  send_password_reset_success.html  (+1 more)
migrations/: 0002_alter_activationid_value.py
templates/: activate_registration.html  password_change.html  reset_password.html  send_password_reset.html  user_registration.html
templates/email/: account_activation.txt  password_reset.txt  registration_email.html
templates/registration/: login.html
users/: urls.py
users/celery/: tasks.py
users/migrations/: 0001_initial.py
users/templates/: footer.html  header.html  registration_success.html
users/templates/email/: password_reset.html  password_updated.html
(+39 files in other folders)
